@@ -1,0 +1,4 @@
+#!/bin/bash
+
+echo Test skipped - discussion needed over the use of \'d\' in numbers
+exit 1
