@@ -48,6 +48,8 @@ cod-tools (unreleased)
         '_symmetry_space_group_name_*';
     - cif_split:
       - appending mode.
+    - codcif:
+      - no longer allowing '[dD]' symbols in CIF numbers.
     - replaced 'can not' with 'cannot' in all affected scripts and modules;
     - replaced the '\d' group with explicit '[0-9]' in regular expressions
       in all affected scripts and modules.
